@@ -1,6 +1,8 @@
 == Tue Nov 10 08:15:14 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>
 
 * Resolved Issue #5 - Message ID generation issue
+* Resolved Issue #7 - README add_file examples don't seem to work - Updated readme and
+  rdoc in Message#add_file
 
 == Mon Nov  9 23:38:33 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>
 
